modules/ecs/service.tf
/*==========================
      AWS ECS Service
===========================*/

resource "aws_ecs_service" "ecs_service" {
    depends_on = [
      aws_ecs_task_definition.ecs_task_definition
    ]
  name                              = "${var.project_name}-service"
  cluster                           = aws_ecs_cluster.ecs_cluster.id
  task_definition                   = aws_ecs_task_definition.ecs_task_definition.arn
  desired_count                     = var.ecs_service.desired_tasks
  launch_type                       = "FARGATE"

  network_configuration {

    security_groups = [
      aws_security_group.nodejs_autodeploy_sg.id
    ]

    subnets         = [
        aws_default_subnet.default_1a.id,
        aws_default_subnet.default_1b.id
    ]

    assign_public_ip = true 
     
  }

  lifecycle {
    // to avoid changes generated by autoscaling or new CodeDeploy changes
    # ignore_changes = [desired_count, task_definition, load_balancer]
    ignore_changes = [desired_count]
    create_before_destroy = true
  }

// ------ Config load balancer ------

#   health_check_grace_period_seconds = 10
#   load_balancer {
#     target_group_arn = var.arn_target_group
#     container_name   = var.container_name
#     container_port   = var.container_port
#   }

}
